--- a/.ebextensions/movieday.config
+++ b/.ebextensions/movieday.config
@@ -4,4 +4,6 @@ option_settings:
     option_name: WSGIPath
     value: movieday/wsgi.py
   - option_name: DJANGO_SETTINGS_MODULE
-    value: movieday.settings
+    value: movieday.setting
+  - option_name: StaticFiles
+    value: app/static
