--- a/.ebextensions/movieday.config
+++ b/.ebextensions/movieday.config
@@ -4,4 +4,4 @@ option_settings:
     option_name: WSGIPath
     value: movieday/wsgi.py
   - option_name: DJANGO_SETTINGS_MODULE
-    value: movieday.setting
+    value: movieday.settings
