--- a/.ebextensions/movieday.config
+++ b/.ebextensions/movieday.config
@@ -4,3 +4,5 @@ option_settings:
     value: movieday/wsgi.py
   - option_name: DJANGO_SETTINGS_MODULE
     value: movieday.settings
+  - option_name: /static/
+    value: app/static/
